// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WarningDialog Snapshot Tests matches snapshot in danger mode 1`] = `
<div
  class=MuiDialog-root z-dialog box-border MuiModal-root css-hash-MuiModal-root-MuiDialog-root
  data-test="warning-dialog"
  role="presentation"
>
  <div
    aria-hidden="true"
    class=MuiBackdrop-root bg-grey-700/40 MuiModal-backdrop css-hash-MuiBackdrop-root-MuiDialog-backdrop
    style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
  <div
    data-testid="sentinelStart"
    tabindex="0"
  />
  <div
    class=MuiDialog-container px-4 py-20 box-border MuiDialog-scrollBody after:h-20 css-hash-MuiDialog-container
    role="presentation"
    style="opacity: 1; transition: opacity 80ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    tabindex="-1"
  >
    <div
      aria-labelledby=:r-mui-id:
      class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl mx-auto my-0 rounded-xl z-dialog p-10 max-w-full shadow-xl css-hash-MuiPaper-root-MuiDialog-paper
      role="dialog"
    >
      <div
        class=MuiTypography-root MuiTypography-headline whitespace-pre-line mb-3 css-hash-MuiTypography-root
        data-test="dialog-title"
      >
        Title
      </div>
      <div
        class=MuiTypography-root MuiTypography-body whitespace-pre-line mb-8 css-hash-MuiTypography-root
        data-test="dialog-description"
      >
        Description
      </div>
      <div
        class="flex flex-col-reverse flex-wrap justify-end gap-3 md:flex-row"
      >
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="warning-cancel"
          tabindex="0"
          type="button"
        >
          Cancel
        </button>
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation button-danger min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="warning-confirm"
          tabindex="0"
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
  <div
    data-testid="sentinelEnd"
    tabindex="0"
  />
</div>
`;

exports[`WarningDialog Snapshot Tests matches snapshot in info mode 1`] = `
<div
  class=MuiDialog-root z-dialog box-border MuiModal-root css-hash-MuiModal-root-MuiDialog-root
  data-test="warning-dialog"
  role="presentation"
>
  <div
    aria-hidden="true"
    class=MuiBackdrop-root bg-grey-700/40 MuiModal-backdrop css-hash-MuiBackdrop-root-MuiDialog-backdrop
    style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
  <div
    data-testid="sentinelStart"
    tabindex="0"
  />
  <div
    class=MuiDialog-container px-4 py-20 box-border MuiDialog-scrollBody after:h-20 css-hash-MuiDialog-container
    role="presentation"
    style="opacity: 1; transition: opacity 80ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    tabindex="-1"
  >
    <div
      aria-labelledby=:r-mui-id:
      class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl mx-auto my-0 rounded-xl z-dialog p-10 max-w-full shadow-xl css-hash-MuiPaper-root-MuiDialog-paper
      role="dialog"
    >
      <div
        class=MuiTypography-root MuiTypography-headline whitespace-pre-line mb-3 css-hash-MuiTypography-root
        data-test="dialog-title"
      >
        Title
      </div>
      <div
        class=MuiTypography-root MuiTypography-body whitespace-pre-line mb-8 css-hash-MuiTypography-root
        data-test="dialog-description"
      >
        Description
      </div>
      <div
        class="flex flex-col-reverse flex-wrap justify-end gap-3 md:flex-row"
      >
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="warning-cancel"
          tabindex="0"
          type="button"
        >
          Cancel
        </button>
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="warning-confirm"
          tabindex="0"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
  <div
    data-testid="sentinelEnd"
    tabindex="0"
  />
</div>
`;

exports[`WarningDialog Snapshot Tests matches snapshot with basic props 1`] = `
<div
  class=MuiDialog-root z-dialog box-border MuiModal-root css-hash-MuiModal-root-MuiDialog-root
  data-test="warning-dialog"
  role="presentation"
>
  <div
    aria-hidden="true"
    class=MuiBackdrop-root bg-grey-700/40 MuiModal-backdrop css-hash-MuiBackdrop-root-MuiDialog-backdrop
    style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
  <div
    data-testid="sentinelStart"
    tabindex="0"
  />
  <div
    class=MuiDialog-container px-4 py-20 box-border MuiDialog-scrollBody after:h-20 css-hash-MuiDialog-container
    role="presentation"
    style="opacity: 1; transition: opacity 80ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    tabindex="-1"
  >
    <div
      aria-labelledby=:r-mui-id:
      class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl mx-auto my-0 rounded-xl z-dialog p-10 max-w-full shadow-xl css-hash-MuiPaper-root-MuiDialog-paper
      role="dialog"
    >
      <div
        class=MuiTypography-root MuiTypography-headline whitespace-pre-line mb-3 css-hash-MuiTypography-root
        data-test="dialog-title"
      >
        Title
      </div>
      <div
        class=MuiTypography-root MuiTypography-body whitespace-pre-line mb-8 css-hash-MuiTypography-root
        data-test="dialog-description"
      >
        Description
      </div>
      <div
        class="flex flex-col-reverse flex-wrap justify-end gap-3 md:flex-row"
      >
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="warning-cancel"
          tabindex="0"
          type="button"
        >
          Cancel
        </button>
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation button-danger min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="warning-confirm"
          tabindex="0"
          type="button"
        >
          OK
        </button>
      </div>
    </div>
  </div>
  <div
    data-testid="sentinelEnd"
    tabindex="0"
  />
</div>
`;

exports[`WarningDialog Snapshot Tests matches snapshot with disabled confirm button 1`] = `
<div
  class=MuiDialog-root z-dialog box-border MuiModal-root css-hash-MuiModal-root-MuiDialog-root
  data-test="warning-dialog"
  role="presentation"
>
  <div
    aria-hidden="true"
    class=MuiBackdrop-root bg-grey-700/40 MuiModal-backdrop css-hash-MuiBackdrop-root-MuiDialog-backdrop
    style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
  <div
    data-testid="sentinelStart"
    tabindex="0"
  />
  <div
    class=MuiDialog-container px-4 py-20 box-border MuiDialog-scrollBody after:h-20 css-hash-MuiDialog-container
    role="presentation"
    style="opacity: 1; transition: opacity 80ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    tabindex="-1"
  >
    <div
      aria-labelledby=:r-mui-id:
      class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl mx-auto my-0 rounded-xl z-dialog p-10 max-w-full shadow-xl css-hash-MuiPaper-root-MuiDialog-paper
      role="dialog"
    >
      <div
        class=MuiTypography-root MuiTypography-headline whitespace-pre-line mb-3 css-hash-MuiTypography-root
        data-test="dialog-title"
      >
        Title
      </div>
      <div
        class=MuiTypography-root MuiTypography-body whitespace-pre-line mb-8 css-hash-MuiTypography-root
        data-test="dialog-description"
      >
        Description
      </div>
      <div
        class="flex flex-col-reverse flex-wrap justify-end gap-3 md:flex-row"
      >
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="warning-cancel"
          tabindex="0"
          type="button"
        >
          Cancel
        </button>
        <button
          class=MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation button-danger min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
          data-test="warning-confirm"
          disabled=""
          tabindex="-1"
          type="button"
        >
          OK
        </button>
      </div>
    </div>
  </div>
  <div
    data-testid="sentinelEnd"
    tabindex="0"
  />
</div>
`;
